--- a/app/src/main/res/layout/dialog_target.xml
+++ b/app/src/main/res/layout/dialog_target.xml
@@ -52,21 +52,43 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <TextView
-            android:layout_marginHorizontal="16dp"
-            android:text="WATCH AD"
-            android:textSize="14sp"
-            android:layout_marginTop="16dp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/ff_montserrat_alternates_regular"
-            android:gravity="center"
-            android:id="@+id/btn_yes"
-            android:paddingVertical="10dp"
-            android:background="@drawable/btn_record"
-            android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="16dp"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="WATCH AD"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/ff_montserrat_alternates_regular"
+                android:gravity="center"
+                android:id="@+id/btn_yes"
+                android:paddingVertical="14dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:background="@drawable/btn_record"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:indeterminateTint="@color/white"
+                android:background="@drawable/loading_ad"
+                app:layout_constraintBottom_toBottomOf="@id/btn_yes"
+                app:layout_constraintTop_toTopOf="@id/btn_yes"
+                app:layout_constraintEnd_toEndOf="@id/btn_yes"
+                app:layout_constraintStart_toStartOf="@id/btn_yes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 
 
