--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -128,7 +128,7 @@ android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:layout_height="wrap_content"
         ads:layout_constraintBottom_toBottomOf="parent"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+        ads:adUnitId="@string/banner_key">
     </com.google.android.gms.ads.AdView>
 
     <ImageView
