--- a/app/src/main/res/layout/fragment_detail_video_call.xml
+++ b/app/src/main/res/layout/fragment_detail_video_call.xml
@@ -28,7 +28,7 @@
         android:layout_marginEnd="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/ib_reset_call_red"
-        android:layout_height="200dp"/>-->
+        android:layout_height="200dp"/>
 
 
     <com.google.android.gms.ads.AdView
