--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:text="Contacts"
+        android:text="@string/contacts"
         android:textColor="@color/tv_blue_text"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -82,7 +82,7 @@
                     android:fontFamily="@font/ff_montserrat_alternates_regular"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
-                    android:text="Max"
+                    android:text="@string/max"
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@id/card"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -94,7 +94,7 @@
                     android:layout_marginStart="16dp"
                     android:fontFamily="@font/ff_montserrat_alternates_regular"
                     android:layout_marginTop="8dp"
-                    android:text="+8404581223"
+                    android:text="@string/number_phone"
                     android:textColor="@color/tv_shadow"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -167,7 +167,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/ff_montserrat_alternates_regular"
-                    android:text="Rocky"
+                    android:text="@string/rocky"
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@id/card__two"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -179,7 +179,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:text="+8404581223"
+                    android:text="@string/number_phone"
                     android:textColor="@color/tv_shadow"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -262,7 +262,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
-                    android:text="Charlie"
+                    android:text="@string/charlie"
                     android:fontFamily="@font/ff_montserrat_alternates_regular"
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@id/card__two_"
@@ -274,7 +274,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:text="+8404581223"
+                    android:text="@string/number_phone"
                     android:fontFamily="@font/ff_montserrat_alternates_regular"
                     android:textColor="@color/tv_shadow"
                     android:textSize="14sp"
@@ -359,7 +359,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
-                    android:text="Milo"
+                    android:text="@string/milo"
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@id/card__two__"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -370,7 +370,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:text="+8404581223"
+                    android:text="@string/number_phone"
                     android:textColor="@color/tv_shadow"
                     android:textSize="14sp"
                     android:fontFamily="@font/ff_montserrat_alternates_regular"
