--- a/app/src/main/res/layout/fragment_detail_call.xml
+++ b/app/src/main/res/layout/fragment_detail_call.xml
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:text="Thanks for you calling!"
+        android:text="@string/thanks_for_you_calling"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:text="More characters"
+        android:text="@string/more_characters"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -200,7 +200,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/ff_montserrat_alternates_regular"
-            android:text="CALL AGAIN"
+            android:text="@string/call_again"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -234,7 +234,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/ff_montserrat_alternates_regular"
-            android:text="Play games"
+            android:text="@string/play_games"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -269,7 +269,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:paddingVertical="10dp"
-            android:text="Share"
+            android:text="@string/share"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -305,7 +305,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:paddingVertical="10dp"
-            android:text="Rate us"
+            android:text="@string/rate_us"
             android:textColor="@color/tv_blue_text"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
