--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingHorizontal="10dp"
-            android:text="Rate us"
+            android:text="@string/rate_us"
             android:textColor="@color/tv_blue"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -63,7 +63,7 @@
             android:background="@drawable/btn_record"
             android:paddingVertical="12dp"
             android:gravity="center"
-            android:text="START"
+            android:text="@string/start"
             android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:textStyle="bold"
             android:layout_marginHorizontal="20dp"
@@ -103,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingHorizontal="10dp"
-            android:text="Exit"
+            android:text="@string/exit"
             android:textColor="@color/tv_blue"
             android:textSize="16sp"
             android:textStyle="bold"
