--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -53,7 +53,7 @@
             android:layout_marginStart="16dp"
 android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:layout_marginTop="8dp"
-            android:text="Max"
+            android:text="@string/max"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@id/tv_status"
             app:layout_constraintStart_toEndOf="@id/card"
@@ -65,7 +65,7 @@ android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="8dp"
-            android:text="online"
+            android:text="@string/online"
             android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:textColor="@color/tv_blue_text"
             app:layout_constraintBottom_toBottomOf="parent"
