--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Max"
+        android:text="@string/max"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -91,7 +91,7 @@
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:paddingVertical="10dp"
-            android:text="Charecters"
+            android:text="@string/characters"
             android:textColor="@color/tv_blue_text"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +111,7 @@
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:paddingVertical="10dp"
-            android:text="CHAT"
+            android:text="@string/chat"
             android:textColor="@color/tv_blue_text"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -131,7 +131,7 @@
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:paddingVertical="10dp"
-            android:text="CALL"
+            android:text="@string/call"
             android:textColor="@color/tv_blue_text"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -151,7 +151,7 @@
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:paddingVertical="10dp"
-            android:text="Video CALL"
+            android:text="@string/video_call"
             android:textColor="@color/tv_blue_text"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -171,7 +171,7 @@
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:paddingVertical="10dp"
-            android:text="live"
+            android:text="@string/live"
             android:textColor="@color/red"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -191,7 +191,7 @@
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:paddingVertical="10dp"
-            android:text="Play games"
+            android:text="@string/play_games"
             android:textColor="@color/green"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -223,7 +223,7 @@
                 android:fontFamily="@font/ff_montserrat_alternates_regular"
                 android:paddingVertical="10dp"
                 android:textColor="@color/white"
-                android:text="Share"
+                android:text="@string/share"
                 android:id="@+id/btn_share"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -259,7 +259,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingVertical="10dp"
-                android:text="Rate us"
+                android:text="@string/rate_us"
                 android:textColor="@color/tv_blue_text"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
