--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -30,7 +30,6 @@
 
             <TextView
                 android:id="@+id/tv_timer"
-                android:text="12:05"
                 android:fontFamily="@font/ff_montserrat_alternates_regular"
                 android:textSize="16sp"
                 android:textColor="@color/white"
@@ -56,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/ff_montserrat_alternates_regular"
-            android:text="Max"
+            android:text="@string/max"
             android:id="@+id/tv_name"
             android:textColor="@color/white"
             android:textSize="24sp" />
@@ -67,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/ff_montserrat_alternates_regular"
-            android:text="+8 404 58 12 23"
+            android:text="@string/number_phone"
             android:textColor="@color/white"
             android:textSize="24sp" />
 
