--- a/app/src/main/res/layout/fragment_play_game.xml
+++ b/app/src/main/res/layout/fragment_play_game.xml
@@ -31,7 +31,7 @@
         <TextView
             android:paddingVertical="10dp"
             android:textColor="@color/white"
-            android:text="Play games"
+            android:text="@string/play_games"
             android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingHorizontal="10dp"
-            android:text="Exit"
+            android:text="@string/exit"
             android:textColor="@color/tv_blue"
             android:textSize="16sp"
             android:textStyle="bold"
