--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:text="ENDING THE CALL IS IN PROGRESS"
+        android:text="@string/ending_the_call_is_in_progress"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -43,7 +43,6 @@
         android:id="@+id/tv_procent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
         android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:textStyle="bold"
         android:textColor="#3f6de3"
