--- a/app/src/main/res/layout/fragment_video_call.xml
+++ b/app/src/main/res/layout/fragment_video_call.xml
@@ -9,6 +9,7 @@
     <SurfaceView
         android:id="@+id/cameraSurfaceView"
         android:layout_width="match_parent"
+        android:backgroundTint="@color/black"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
