--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.settings.SettingsFragment">
@@ -29,99 +29,133 @@
         app:layout_constraintStart_toEndOf="@id/btn_back"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/img_table"
-        style="@style/ImageViewStyle"
-        android:layout_marginTop="36dp"
-        android:src="@drawable/ic_tabler_license"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_back" />
-
-    <TextView
-        android:id="@+id/tv_licence"
-        style="@style/TextViewStyle"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:text="@string/licence"
-        app:layout_constraintStart_toEndOf="@id/img_table"
-        app:layout_constraintTop_toTopOf="@id/img_table" />
-
-    <ImageView
-        android:id="@+id/img_share_blue"
-        style="@style/ImageViewStyle"
-        android:src="@drawable/ic_share_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_table" />
-
-    <TextView
-        android:id="@+id/tv_privacy"
-        style="@style/TextViewStyle"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:text="@string/privacy_policy"
-        app:layout_constraintStart_toEndOf="@id/img_share_blue"
-        app:layout_constraintTop_toTopOf="@id/img_share_blue" />
-
-    <ImageView
-        android:id="@+id/img_like"
-        style="@style/ImageViewStyle"
+    <LinearLayout
+        android:id="@+id/ll_licence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/like"
+        android:layout_marginTop="36dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_share_blue" />
+        app:layout_constraintTop_toBottomOf="@id/btn_back">
 
-    <TextView
-        android:id="@+id/tv_rate"
-        style="@style/TextViewStyle"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:text="@string/rate_us"
-        app:layout_constraintStart_toEndOf="@id/img_like"
-        app:layout_constraintTop_toTopOf="@id/img_like" />
+        <ImageView
+            android:id="@+id/img_table"
+            style="@style/ImageViewStyle"
+            android:src="@drawable/ic_tabler_license" />
 
-    <ImageView
-        android:id="@+id/img_blue"
-        style="@style/ImageViewStyle"
-        android:src="@drawable/ic_material_share_blue"
+        <TextView
+            android:id="@+id/tv_licence"
+            style="@style/TextViewStyle"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:text="@string/licence"
+            app:layout_constraintStart_toEndOf="@id/img_table"
+            app:layout_constraintTop_toTopOf="@id/img_table" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_privacy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_like" />
+        app:layout_constraintTop_toBottomOf="@id/ll_licence">
 
-    <TextView
-        android:id="@+id/tv_share"
-        style="@style/TextViewStyle"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:text="@string/share_it"
-        app:layout_constraintStart_toEndOf="@id/img_blue"
-        app:layout_constraintTop_toTopOf="@id/img_blue" />
+        <ImageView
+            android:id="@+id/img_share_blue"
+            style="@style/ImageViewStyle"
+            android:src="@drawable/ic_share_blue" />
 
-    <ImageView
-        android:id="@+id/img_more"
-        style="@style/ImageViewStyle"
-        android:src="@drawable/ic_more_r"
+        <TextView
+            android:id="@+id/tv_privacy"
+            style="@style/TextViewStyle"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:text="@string/privacy_policy" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_rate_us"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_blue" />
+        app:layout_constraintTop_toBottomOf="@id/ll_privacy">
 
-    <TextView
-        style="@style/TextViewStyle"
-        android:id="@+id/tv_more_app"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:text="@string/more_apps"
-        app:layout_constraintStart_toEndOf="@id/img_more"
-        app:layout_constraintTop_toTopOf="@id/img_more" />
+        <ImageView
+            android:id="@+id/img_like"
+            style="@style/ImageViewStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/like" />
 
-    <ImageView
-        android:id="@+id/img_gamepad"
-        style="@style/ImageViewStyle"
-        android:src="@drawable/gamepad"
+        <TextView
+            android:id="@+id/tv_rate"
+            style="@style/TextViewStyle"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:text="@string/rate_us" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_more" />
+        app:layout_constraintTop_toBottomOf="@id/ll_rate_us">
 
-    <TextView
-        android:id="@+id/btn_play"
+        <ImageView
+            android:id="@+id/img_blue"
+            style="@style/ImageViewStyle"
+            android:src="@drawable/ic_material_share_blue" />
 
-        style="@style/TextViewStyle"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:text="@string/play_games"
-        app:layout_constraintStart_toEndOf="@id/img_gamepad"
-        app:layout_constraintTop_toTopOf="@id/img_gamepad" />
+        <TextView
+            android:id="@+id/tv_share"
+            style="@style/TextViewStyle"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:text="@string/share_it" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_more_apps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_share">
+
+        <ImageView
+            android:id="@+id/img_more"
+            style="@style/ImageViewStyle"
+            android:src="@drawable/ic_more_r" />
+
+        <TextView
+            android:id="@+id/tv_more_app"
+            style="@style/TextViewStyle"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:text="@string/more_apps" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/ll_play_games"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_more_apps">
+
+        <ImageView
+            android:id="@+id/img_gamepad"
+            style="@style/ImageViewStyle"
+            android:src="@drawable/gamepad" />
+
+        <TextView
+            android:id="@+id/btn_play"
+            style="@style/TextViewStyle"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:text="@string/play_games" />
+
+    </LinearLayout>
+
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
@@ -129,7 +163,7 @@
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
         ads:adUnitId="@string/banner_key"
-        ads:layout_constraintBottom_toBottomOf="parent"/>
+        ads:layout_constraintBottom_toBottomOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
